# CyclicCellularAutomaton

./: Cargo.toml  LICENSE  README.md
benches/: cyclic_automaton_bench.rs
src/: colormap.rs  config.rs  cyclic_automaton.rs  lib.rs  main.rs
