[package]
name = "cca"
version = "0.1.0"
authors = ["alperen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
gif = "0.11.1"
itertools = "0.10.0"
rayon="1.5.0"
bencher = "0.1.5"

[[bench]]
name = "cyclic_automaton_bench"
harness = false